--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.35.3",
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "debug": "^4.1.1",
     "webpack-cli": "^3.3.5"
   }
